	ADDED - RRD datasource can take SET rrd_default_path to make configs a little easier to read.
	ADDED - RRD datasource can take SET rrd_default_in_ds and rrd_default_out_ds for non-Cacti users.
	ADDED - RRD datasource can get Cacti query information (in poller_output mode ONLY) - like ifAlias, ifSpeed etc
	ADDED - RRD datasource can take the ifSpeed from the above, and use it in the map.
	ADDED - RRD datasource fills in Cacti cacti_path_rra and cacti_url with Cacti base path and URL
	ADDED - RRD datasource can take global SET rrd_options to add extra options to rrdtool command lines
	ADDED - SNMP datasource also stores the raw data from the SNMP agent in snmp_raw_in/snmp_raw_out
	ADDED - SNMP datasource allows '-' as an OID, similar to '-' targets in RRDs.
	ADDED - Control the drawing order with ZORDER.
	ADDED - New artificial icons: nink, inpie and outpie. See ICON in manual.
	ADDED - Warning for probably-incorrect BWLABELPOS where in<out
	ADDED - New global SET variables to disable some common warnings you may not care about :-)
	ADDED - Cacti management screen shows number of warnings for each map last time it ran
	ADDED - Cacti management screen also has a link to the log entries for the map in question
	ADDED - The TARGET aggregation thing can also take scale factors now: -5.5*myrrdfile.rrd
	ADDED - Cacti plugin caches thumbnail sizes, improving thumbnail view rendering
	ADDED - Cacti plugin allows adding the same map twice (more useful than it sounds)
	ADDED - Cacti plugin allows setting of map-global variables in the management UI
	ADDED - Cacti plugin allows settings of global map-global (across all maps) variables too
	ADDED - Cacti plugin adds links in 'user' pages to management screen (if you are an admin)
	ADDED - HTMLSTYLESHEET keyword allows you to specify a URL for a CSS stylesheet (CLI tool only)
	ADDED - A few extra CSS id and class attributes, to make styling the page easier.